fixed btns and overflow styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -48,6 +48,7 @@ body {
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.6rem;
   background-color: var(--color-magnolia);
+  overflow-x: hidden;
 }
 
 /* Buttons */
@@ -67,13 +68,13 @@ body {
 
 .btn-steps {
   border: none;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 500;
   cursor: pointer;
 }
 
 .btn--next {
-  padding: 1.3rem 1.8rem;
+  padding: 1.3rem 0;
   width: 10rem;
   color: var(--color-white);
   background-color: var(--color-primary);
